--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.36.0"
+    "recoil": "^0.6.1",
+    "sass": "^1.36.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "17.0.15",
+    "@types/styled-components": "^5.1.23",
+    "babel-plugin-styled-components": "^2.0.6",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.5"
