--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "12",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "recoil": "^0.6.1",
     "sass": "^1.36.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
     "@types/react": "17.0.15",
     "@types/styled-components": "^5.1.23",
     "babel-plugin-styled-components": "^2.0.6",
