--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "next": "12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading-spin": "^2.1.9",
+    "react-text-transition": "^1.3.0",
     "recoil": "^0.6.1",
+    "rive-react": "^0.0.31",
     "sass": "^1.36.0",
     "styled-components": "^5.3.3"
   },
