--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rive-app/react-canvas-lite": "^4.18.8",
     "framer-motion": "^6.2.8",
-    "next": "12",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^15.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-loading-spin": "^2.1.9",
     "react-text-transition": "^1.3.0",
     "recoil": "^0.6.1",
-    "rive-react": "^0.0.31",
     "sass": "^1.36.0",
     "styled-components": "^5.3.3"
   },
