--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "babel-plugin-styled-components": "^2.0.6",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5"
+    "typescript": "^5.8.3"
   }
 }
